tests/snapshots/run_wpt_conformance__trtx_split_float16_2D_tensor_number_splits_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "split.https.any.js",
    "split float16 2D tensor number splits default options",
    "trtx",
    Failed {
        msg: Some(
            "Failed to read tensor: DriverError(CUDA_ERROR_INVALID_VALUE, \"invalid argument\")\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    splitInput: f16[8, 3];\n  }\n\n  nodes {\n    [splitOutput1, splitOutput2] = split(splitInput, axis=0, label=\"\");\n  }\n\n  outputs { splitOutput1; splitOutput2; }\n}\n",
        ),
    },
)
